--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>97351597217-0gjppm31rgh6h35qarr2hotld2a760i8.apps.googleusercontent.com</string>
+	<string>566599169730-p16cqrhun5cqn4ufnocp7eeiqm9go65t.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.97351597217-0gjppm31rgh6h35qarr2hotld2a760i8</string>
+	<string>com.googleusercontent.apps.566599169730-p16cqrhun5cqn4ufnocp7eeiqm9go65t</string>
 	<key>API_KEY</key>
-	<string>AIzaSyADmJtnNxIRXSXC4871sKb-6gGNMGwWRk0</string>
+	<string>AIzaSyCFYDb5Qz023gZ-_QslYErmV78k5Y8T1vw</string>
 	<key>GCM_SENDER_ID</key>
-	<string>97351597217</string>
+	<string>566599169730</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>th.or.hii.flowdetect</string>
 	<key>PROJECT_ID</key>
-	<string>flowdetect-a5b69</string>
+	<string>flowdetect-8be65</string>
 	<key>STORAGE_BUCKET</key>
-	<string>flowdetect-a5b69.appspot.com</string>
+	<string>flowdetect-8be65.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,6 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:97351597217:ios:3faea1e465a799f5b284e0</string>
+	<string>1:566599169730:ios:b6243e2cf8c3811804ad5b</string>
 </dict>
 </plist>
