--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
     
 
 
-   <application
+    <application 
+        android:usesCleartextTraffic="true"
         android:label="flowdetect"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
