--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,10 @@ dependencies:
   #     ref: master
 
   video_player: ^2.4.6
+  # video_player: ^2.4.5
+
+  chewie: ^1.3.4
+  # chewie: ^1.3.3
 
   path_provider: ^2.0.11
 
@@ -73,7 +77,7 @@ dependencies:
 
   external_path: ^1.0.1
 
-  chewie: ^1.3.4
+
   
 dev_dependencies:
   flutter_test:
