--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,8 +77,6 @@ dependencies:
 
   external_path: ^1.0.1
 
-
-  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -105,6 +103,7 @@ flutter:
     - images/logo.png
     - images/hii.png
     - images/other_river.png
+    - images/other_river_measurement.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
