--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,9 +10,9 @@
 
     <application 
         android:usesCleartextTraffic="true"
-        android:label="flowdetect"
+        android:label="Water FlowDetect"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/launcher_icon">
 
     <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyDajlyTxCsCQb9_k3tpLwD7akaxHZopRJw" />
 
