--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,8 @@ dependencies:
 
   flutter_launcher_icons: ^0.10.0
 
+  webview_flutter: ^3.0.4
+
 flutter_icons:
   android: "launcher_icon"
   ios: true
