--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,8 @@ dependencies:
 
   webview_flutter: ^3.0.4
 
+  progress_dialog_null_safe: ^1.0.7
+
 flutter_icons:
   android: "launcher_icon"
   ios: true
