--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,14 +50,15 @@ dependencies:
 
   geolocator: ^8.2.1
 
-  camera: ^0.9.8+1
+  # camera: ^0.9.8+1
+  camera: ^0.10.0+3
   # camera:
   #   git:
   #     url: https://github.com/camsim99/plugins.git
   #     path: packages/camera/camera
   #     ref: master
 
-  video_player: ^2.4.6
+  video_player: ^2.4.7
   # video_player: ^2.4.5
 
   chewie: ^1.3.4
