--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,7 @@ dependencies:
   geolocator: ^8.2.1
 
   # camera: ^0.9.8+1
-  camera: ^0.10.0+3
+  camera: ^0.10.0+4
   # camera:
   #   git:
   #     url: https://github.com/camsim99/plugins.git
@@ -85,6 +85,8 @@ dependencies:
   progress_dialog_null_safe: ^1.0.7
 
   better_player: ^0.0.83
+
+  shared_preferences: ^2.0.15
 
 flutter_icons:
   android: "launcher_icon"
