--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -3,11 +3,20 @@
 <plist version="1.0">
 <dict>
     
+    <key>NSLocalNetworkUsageDescription</key>
+    <string>App needs access to location</string>
+    
+<!--    <key>NSLocationWhenInUseUsageDescription</key>-->
+<!--    <string>App needs access to location</string>-->
+    
     <key>NSPhotoLibraryUsageDescription</key>
     <string>App needs access to photo lib for profile images</string>
 
     <key>NSCameraUsageDescription</key>
     <string>To capture profile photo please grant camera access</string>
+    
+    <key>NSMicrophoneUsageDescription</key>
+    <string>To capture profile photo please grant microphone access</string>
     
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
